finished changing to use VariableSet

--- a/voxels-0.6.cbp
+++ b/voxels-0.6.cbp
@@ -69,12 +69,19 @@
 		<Unit filename="include/texture/image.h" />
 		<Unit filename="include/texture/texture_atlas.h" />
 		<Unit filename="include/texture/texture_descriptor.h" />
+		<Unit filename="include/util/arena_allocator.h" />
+		<Unit filename="include/util/balanced_tree.h" />
+		<Unit filename="include/util/circular_deque.h" />
 		<Unit filename="include/util/color.h" />
 		<Unit filename="include/util/dimension.h" />
+		<Unit filename="include/util/flag.h" />
 		<Unit filename="include/util/game_version.h" />
 		<Unit filename="include/util/matrix.h" />
 		<Unit filename="include/util/position.h" />
+		<Unit filename="include/util/solve.h" />
+		<Unit filename="include/util/string_cast.h" />
 		<Unit filename="include/util/util.h" />
+		<Unit filename="include/util/variable_set.h" />
 		<Unit filename="include/util/vector.h" />
 		<Unit filename="src/decoder/png_decoder.cpp" />
 		<Unit filename="src/physics/physics.cpp" />
