adding server/client

--- a/voxels-0.6.cbp
+++ b/voxels-0.6.cbp
@@ -54,6 +54,7 @@
 		</Linker>
 		<Unit filename="include/decoder/ogg_vorbis_decoder.h" />
 		<Unit filename="include/decoder/png_decoder.h" />
+		<Unit filename="include/networking/server.h" />
 		<Unit filename="include/physics/physics.h" />
 		<Unit filename="include/platform/audio.h" />
 		<Unit filename="include/platform/event.h" />
@@ -70,6 +71,7 @@
 		<Unit filename="include/script/script_nodes.h" />
 		<Unit filename="include/stream/compressed_stream.h" />
 		<Unit filename="include/stream/network.h" />
+		<Unit filename="include/stream/network_event.h" />
 		<Unit filename="include/stream/stream.h" />
 		<Unit filename="include/texture/image.h" />
 		<Unit filename="include/texture/texture_atlas.h" />
@@ -92,6 +94,7 @@
 		<Unit filename="include/util/variable_set.h" />
 		<Unit filename="include/util/vector.h" />
 		<Unit filename="src/decoder/png_decoder.cpp" />
+		<Unit filename="src/networking/server.cpp" />
 		<Unit filename="src/physics/physics.cpp" />
 		<Unit filename="src/platform/audio.cpp" />
 		<Unit filename="src/platform/main.cpp" />
