--- a/voxels-0.6.cbp
+++ b/voxels-0.6.cbp
@@ -92,6 +92,7 @@
 		<Unit filename="include/util/position.h" />
 		<Unit filename="include/util/solve.h" />
 		<Unit filename="include/util/string_cast.h" />
+		<Unit filename="include/util/unlock_guard.h" />
 		<Unit filename="include/util/util.h" />
 		<Unit filename="include/util/variable_set.h" />
 		<Unit filename="include/util/vector.h" />
