--- a/voxels-0.6.cbp
+++ b/voxels-0.6.cbp
@@ -61,6 +61,7 @@
 		<Unit filename="include/platform/event.h" />
 		<Unit filename="include/platform/platform.h" />
 		<Unit filename="include/platform/platformgl.h" />
+		<Unit filename="include/player/player.h" />
 		<Unit filename="include/render/generate.h" />
 		<Unit filename="include/render/mesh.h" />
 		<Unit filename="include/render/render_layer.h" />
