--- a/voxels-0.6.cbp
+++ b/voxels-0.6.cbp
@@ -12,6 +12,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters="--server" />
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-Og" />
